--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     repositories {
         google()
@@ -5,7 +6,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.google.gms:google-services:4.3.0'
     }
 }
 
@@ -27,3 +29,4 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+apply plugin: 'com.google.gms.google-services'
