--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_blue: ^0.6.0+2
+  flutter_blue: ^0.6.2
   flutter_circular_chart: ^0.1.0
   charts_flutter: ^0.8.1
-  shared_preferences: ^0.4.3
-
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^4.0.2
+  google_sign_in: ^4.0.7
+  # Add the dependencies for any other Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  firebase_auth: ^0.11.1+3
+  cloud_firestore: ^0.12.9+4
+  firebase_dynamic_links: ^0.5.0+1
+  uuid: ^2.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
